fix navbar mobile and project spacing

--- a/assets/css/_carrousel.scss
+++ b/assets/css/_carrousel.scss
@@ -59,6 +59,7 @@ h2#certificados{
 
     li {
         margin-left: 1rem;
+        margin-bottom: .5rem;
 
         button {
             cursor: pointer;
