--- a/assets/css/_globals.scss
+++ b/assets/css/_globals.scss
@@ -16,3 +16,9 @@ p {
     font-size: 13pt;
     font-weight: lighter;
 }
+
+.height-full-on-desktop {
+    @media(min-width: $md){
+        height: 100vh;
+    }
+}
